crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__device_list_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
List all connected devices

Usage: wheelctl device list [OPTIONS]

Options:
  -d, --detailed    Show detailed device information
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
