crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__device_reset_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Reset device to safe state

Usage: wheelctl device reset [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>  Device ID or name

Options:
  -f, --force       Force reset without confirmation
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
