crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_create_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Create new profile

Usage: wheelctl profile create [OPTIONS] <PATH>

Arguments:
  <PATH>  Profile file path

Options:
      --from <FROM>  Base profile to copy from
      --json         Output in JSON format for machine parsing
      --game <GAME>  Game scope
  -v, --verbose...   Verbose logging
      --car <CAR>    Car scope
  -h, --help         Print help
