crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_export_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Export profile

Usage: wheelctl profile export [OPTIONS] <PROFILE>

Arguments:
  <PROFILE>  Profile path or ID

Options:
      --json             Output in JSON format for machine parsing
  -o, --output <OUTPUT>  Output file path
      --signed           Include signature
  -v, --verbose...       Verbose logging
  -h, --help             Print help
